--- a/hmenu.cabal
+++ b/hmenu.cabal
@@ -2,7 +2,7 @@
 --  see http://haskell.org/cabal/users-guide/
 
 name:                hmenu
-version:             0.1.0.0
+version:             0.1.0.1
 -- synopsis:            
 -- description:         
 license:             BSD3
@@ -16,10 +16,10 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable hmenu
-  main-is:             hmenu.hs
+  main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9, process >=1.2 && <1.3
                      , MissingH
-  -- hs-source-dirs:      
+  hs-source-dirs:      src
   default-language:    Haskell2010
