--- a/hmenu.cabal
+++ b/hmenu.cabal
@@ -21,7 +21,9 @@ executable hmenu
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8, process >=1.2 && <1.3
+  build-depends:       base >=4.8 && <4.9
+                     , process >=1.2 && <1.3
                      , MissingH
+                     , directory
   hs-source-dirs:      src
   default-language:    Haskell2010
